# cpp_beadando_amoba

./: AmobaWidget.cpp  AmobaWidget.hpp  Application.cpp  Application.hpp  CMakeLists.txt  JatekMester.cpp  JatekMester.hpp  LabelWidget.cpp  LabelWidget.hpp  NumericWidget.cpp  NumericWidget.hpp  README.md  SelectorWidget.cpp  SelectorWidget.hpp  Widget.cpp  main.cpp
